--- a/about.css
+++ b/about.css
@@ -5,37 +5,35 @@ body, html {
     color: #333;
     background-color: #f5f5f5;
 }
-
-header {
+header, footer {
     background-color: #00796b;
     color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 20px;
+    text-align: center;
+}
+
+footer {
+    margin-top: 20px;
 }
 
 nav ul {
     list-style: none;
-    display: flex;
-    margin: 0;
     padding: 0;
 }
 
-nav li {
-    padding: 0 10px;
+nav ul li {
+    display: inline;
+    margin: 0 10px;
 }
 
 nav a {
     color: white;
     text-decoration: none;
-    font-size: 16px;
 }
 
 nav a.active, nav a:hover {
     text-decoration: underline;
 }
-
 .main {
     display: flex;
     flex-direction: column;
