--- a/contact.css
+++ b/contact.css
@@ -66,7 +66,6 @@ nav a.active, nav a:hover {
     margin-top: 5px;
     border: 1px solid #ddd;
     border-radius: 5px;
-    width: 100%;
 }
 
 .contact-form button {
@@ -79,6 +78,9 @@ nav a.active, nav a:hover {
     margin-top: 20px;
 }
 
+.contact-form input {
+    margin-right: 5px;
+}
 .contact-form button:hover {
     background-color: #005743;
 }
