--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ header {
     align-items: center;
     color: white;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        min-height: 45px;
 }
 
 .banner {
